docs/v5.3.0/_sources/gallery/experiment/sphere/coherent_coupling_vs_phioffset.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/experiment/sphere/coherent_coupling_vs_phioffset.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gallery_experiment_sphere_coherent_coupling_vs_phioffset.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_experiment_sphere_coherent_coupling_vs_phioffset.py:


Sphere: Coherent Goniometer
===========================

.. GENERATED FROM PYTHON SOURCE LINES 6-52



.. image-sg:: /gallery/experiment/sphere/images/sphx_glr_coherent_coupling_vs_phioffset_001.png
   :alt: coherent coupling vs phioffset
   :srcset: /gallery/experiment/sphere/images/sphx_glr_coherent_coupling_vs_phioffset_001.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    +-----------------------+-----------------------+
    | Sellmeier Materials   | Tabulated Materials   |
    +=======================+=======================+
    | fused_silica          | calcium               |
    +-----------------------+-----------------------+
    | water                 | gold                  |
    +-----------------------+-----------------------+
    | BAK1                  | copper                |
    +-----------------------+-----------------------+
    | soda_lime_glass       | silicon               |
    +-----------------------+-----------------------+
    | lithium_niobate       | aluminium             |
    +-----------------------+-----------------------+
    | argon                 | iron                  |
    +-----------------------+-----------------------+
    | flint                 | polyetylene           |
    +-----------------------+-----------------------+
    | BAF10                 | sodium                |
    +-----------------------+-----------------------+
    | germanium             | silver                |
    +-----------------------+-----------------------+
    | air                   | nickel                |
    +-----------------------+-----------------------+
    | crown                 | zinc                  |
    +-----------------------+-----------------------+
    | SF5                   |                       |
    +-----------------------+-----------------------+
    | polystyren            |                       |
    +-----------------------+-----------------------+
    | BK7                   |                       |
    +-----------------------+-----------------------+
    | acetone               |                       |
    +-----------------------+-----------------------+
    | ZBLAN                 |                       |
    +-----------------------+-----------------------+

    [<matplotlib.lines.Line2D object at 0x7fa354987d10>, <matplotlib.lines.Line2D object at 0x7fa357833f50>, <matplotlib.lines.Line2D object at 0x7fa354c07590>, <matplotlib.lines.Line2D object at 0x7fa354c06190>]





|

.. code-block:: Python

    import numpy
    from PyMieSim import (
        ureg,
        CoherentModeSet,
        SphereSet,
        GaussianSet,
        PolarizationSet,
        Experiment,
        print_available,
        SellmeierMaterial,
    )


    print_available()

    polarization_set = PolarizationSet(
        angles=[90.0] * ureg.degree,
    )

    source = GaussianSet(
        wavelength=[1200] * ureg.nanometer,
        polarization=polarization_set,
        optical_power=[1e-3] * ureg.watt,
        numerical_aperture=[0.2],
    )
    scatterer = SphereSet(
        diameter=[2000] * ureg.nanometer,
        material=[SellmeierMaterial(material_name="BK7")],
        medium=[1],
    )

    detector = CoherentModeSet(
        mode_number="LP11",
        numerical_aperture=[0.5, 0.3, 0.1, 0.05],
        phi_offset=numpy.linspace(-180, 180, 300) * ureg.degree,
        gamma_offset=[0] * ureg.degree,
        sampling=[400],
        polarization_filter=[10] * ureg.degree,
        rotation=[0] * ureg.degree,
    )

    experiment = Experiment(scatterer_set=scatterer, source_set=source, detector_set=detector)

    result = experiment.get("coupling")

    result.plot(x="detector:phi_offset")


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 0.444 seconds)


.. _sphx_glr_download_gallery_experiment_sphere_coherent_coupling_vs_phioffset.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: coherent_coupling_vs_phioffset.ipynb <coherent_coupling_vs_phioffset.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: coherent_coupling_vs_phioffset.py <coherent_coupling_vs_phioffset.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: coherent_coupling_vs_phioffset.zip <coherent_coupling_vs_phioffset.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
